make /api/albums api nicer
